--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -18,7 +18,7 @@ subs_masking: False
 seed: 1
 
 loader:
-  global_batch_size: 512
+  global_batch_size: 8
   eval_global_batch_size: ${.global_batch_size}
   # Note: batch_size and eval_batch_size are **per machine**
   batch_size: ${div_up:${.global_batch_size}, ${eval:${trainer.devices} * ${trainer.num_nodes}}}
@@ -77,7 +77,7 @@ trainer:
 
 wandb:
   project: text-diffusion
-  notes: Mulan for text
+  notes: Class conditional implementation of MDLM
   group: null
   job_type: null
   name: null
@@ -89,13 +89,13 @@ wandb:
 
 hydra:
   run:
-    dir: ./outputs/${data.train}/${now:%Y.%m.%d}/${now:%H%M%S}
+    dir: ./db/${data.train}/${now:%Y.%m.%d}/${now:%H%M%S}
   job:
     chdir: true
 
 checkpointing:
   # Use custom `save_dir` if, e.g., saving to S3 bucket, otherwise leave this parameter as is
-  save_dir: ${cwd:}
+  save_dir: ${cwd:}/db
   # Note: `checkpoints` path should correspond to `checkpoint_every_n_steps.dirpath`
   resume_from_ckpt: true
   resume_ckpt_path: ${.save_dir}/checkpoints/last.ckpt
