--- a/configs/model/medium-cond.yaml
+++ b/configs/model/medium-cond.yaml
@@ -8,4 +8,6 @@ n_heads: 16
 scale_by_sigma: True
 dropout: 0.1
 tie_word_embeddings: False
+# Class conditional implementation of MDLM
 label_dropout: 0.1
+num_classes: 20 # tied to arxiv dataset
