--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,7 +5,7 @@ defaults:
   - /model: small
   - /strategy: ddp
   - /noise: loglinear
-  - /lr_scheduler: constant_warmup
+  - /lr_scheduler: cosine_decay_warmup
 
 mode: train  # train / ppl_eval / sample_eval
 diffusion: absorbing_state
@@ -39,12 +39,16 @@ sampling:
   authorized_labels:
   - 0
   - 1
-  cfg_scale: 2
+  cfg_scale: 0.1
 
 sweep:
-  min_timesteps: 1
-  max_timesteps: 10_000
-  num_samples: 100 
+  target: "cfg" # cfg, timesteps
+  min: 0.01 # 1 for time, 0.1 for cfg_scale
+  max: 1.2 # 10_000 for time, 8 for cfg_scale 
+  num_samples: 100
+
+
+
 
 
 training:
