--- a/configs/model/medium-cond-cls.yaml
+++ b/configs/model/medium-cond-cls.yaml
@@ -11,3 +11,5 @@ tie_word_embeddings: False
 # Class conditional implementation of MDLM
 label_dropout: 0.1 # similar to DiT implementation
 num_classes: 11 # tied to arxiv classification dataset (ccdv/arxiv-classification)
+conditional: True
+cond_method: "label" # label-based conditioning
