--- a/configs/model/eps-small.yaml
+++ b/configs/model/eps-small.yaml
@@ -2,13 +2,13 @@ name: small-eps
 type: ddit
 hidden_size: 768
 cond_dim: 128
-length: 1024
+length: 256
 n_blocks: 12
 n_heads: 12
 scale_by_sigma: True
 dropout: 0.1
 tie_word_embeddings: False
-# Epsilon-proba conditional implementation of MDLM
+# Epsilon-rate conditional implementation of MDLM
 conditional: True
 cond_method: "proba" # probability-based conditioning
-proba_method: "bucket" # bucketized probability conditioning
+proba_method: "erfinv" # inverse error function + mlp
