--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -80,7 +80,7 @@ trainer:
   devices: ${device_count:}
   accumulate_grad_batches: ${div_up:${loader.global_batch_size}, ${eval:${trainer.devices} * ${loader.batch_size} * ${trainer.num_nodes}}}
   gradient_clip_val: 1.0
-  precision: 'fp16' # 'fp32' / 'fp16' / 'bf16'
+  precision: '16' # '16' / '32' / 'bf16'
   num_sanity_val_steps: 2
   max_steps: 50_000
   log_every_n_steps: 10
